--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -559,107 +559,107 @@ stories:
   domain: http://www.cnhi.com/register/
   link: https://www.cnhi.com/home-owner-discovers-burglar-offered-hit-of-meth/article_c7c39b0e-9dc9-11e9-9b90-fb94808d669a.html
 images:
-- name: file-00-00-18-35.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-18-35.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
-- name: old-barn-old-barn-1500-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-dream.jpg
-- name: powerlines-power-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-post-modern.jpg
-- name: hollywood-building-hollywood-building-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-dali.jpg
-- name: castle-wall-DSC-0067-attack-planes.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-attack-planes.JPG
-- name: udnie-IMG_7162.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7162.jpg
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: gears-4882162452-fa3126b38d-b-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-alien-goggles.jpg
-- name: eduardo-eduardo-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-graham-sutherland.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crunch-paper.jpg
-- name: old-granary-field-oldhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-dali.jpg
-- name: store-on-corner-oldcabin-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-smooth-ride.jpg
-- name: razorwire-DSC-0080-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-gred-mash.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-cinnamon-rolls.png
-- name: adam-smith-adam-smith-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gred-mash.jpg
-- name: beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
-- name: rockingchair-face-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-colored-circuits.jpg
-- name: aws-s3-stories-beachclouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-beachclouds-clean-view.jpg
-- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
-- name: hollywood-building-hollywood-building-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-hot-spicy.jpg
-- name: store-on-corner-oldcabin-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-post-modern.jpg
-- name: crow-crow-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
-- name: fence-fence-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-rain.jpg
-- name: victoria-victoria-corner-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel.jpg
-- name: blossombar-crafty-painting-file-00-00-50-55.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-55.jpg
-- name: sand-hand-sand-hand-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-yellow-collage.jpg
-- name: old-house-oldhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-atari-missle.jpg
-- name: border-fence-border-fence-on-hill-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
-- name: udnie-IMG_2410.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_2410.jpg
-- name: nazi-invasion-IMG_6170.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6170.jpg
-- name: aws-s3-square-fredericksburg-downtown-flag-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-fredericksburg-downtown-flag-square.jpg
-- name: berlinwall2-berlinwall-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
-- name: bluelake-colorful-dream-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-38-67.jpg
-- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
-- name: birdhouse-birdhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
-- name: store-on-corner-oldcabin-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kandinsky-bv.jpg
-- name: razorwire-DSC-0080-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-bright-sand.jpg
-- name: cargo-ship-cargo-ship-on-sea-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-nazi-poster.jpg
-- name: border-fence-border-fence-on-hill-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-atari-asteroids.jpg
-- name: dc-statue-dcstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
-- name: aws-s3-stories-methuselah-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-methuselah-mountain.jpg
-- name: san-francisco-street-view-san-francisco-street-view-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-monet-one.jpg
-- name: art-museum-art-museum-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purp-paper.jpg
-- name: capital-battle-capitolbattle-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
-- name: blossombar-rainbow-festival-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-rainbow-festival-file-00-00-00-00.jpg
-- name: aws-s3-dunes-dunes-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-600.jpg
-- name: catacombs-catacombs-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
-- name: crow_really_hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_really_hot.jpg
-- name: gypsymosaic-gypsy-eyes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes.jpg
+- name: liberty-back-statue-liberty-back-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-sunday.jpg
+- name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
+- name: oldhouse-granaryfield-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
+- name: server-cloud-server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
+- name: catacombs-catacombs-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smooth-ride.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: abandonedbuildings_really_hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_really_hot.jpg
+- name: downtheline-downtheline-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-clean-view.jpg
+- name: white-house-lawn-white-house-window-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-far-away.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+- name: rockingchair-rockingchair-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-deep-connections.jpg
+- name: adam-smith-adam-smith-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-graham-sutherland.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+- name: downtown-los-angeles-downtown-la-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-free-woman.JPG
+- name: locked-up-steam-lock-up-steam-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colorful-blocks.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-matrix.jpg
+- name: paris-paris-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-oily-mcoilface.jpg
+- name: aws-s3-models-dali1.t7
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-models-dali1.t7
+- name: san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
+- name: window-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
+- name: castle-wall-DSC-0067-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
+- name: razorwire-DSC-0080-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
+- name: store-on-corner-store-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dry-skin.jpg
+- name: mediterranean-mediterranean-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-blocks.jpg
+- name: server-racks-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds.jpg
+- name: capital-battle-capitolbattle-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-oily-mcoilface.jpg
+- name: server-cloud-server-racks-clouds-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-pablo-blue.jpg
+- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
+- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
+- name: aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
+- name: nazi-invasion-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
+- name: catacombs-catacombs-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-feed-people.jpg
+- name: stories-new-49-127-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-49-127-800-500-0-max-0-1--1.jpg
+- name: aws-s3-stories-new-oldbarn-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-oldbarn-dark-dali.jpg
+- name: blossombar-colorful-dream-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
+- name: oldbarn-oldbarn-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crafty-painting.jpg
+- name: blossombar-blue-granite-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-50-62.jpg
+- name: abandonedbuildings_yellow_collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_collage.jpg
+- name: store-on-corner-oldcabin-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-space-pizza.jpg
+- name: old-school-house-old-schoolhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-aqua.jpg
+- name: beach-rocks-beach-rocks-currents-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-dys-1.jpg
+- name: old-granary-field-oldhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
+- name: old-cabin-oldcabin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-emily-carr.jpg
+- name: castle-wall-DSC-0067-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-rainbow-festival.JPG
+- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
+- name: school-clouds-church-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-granite.JPG
+- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+- name: copper-circuit-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0033.jpg
 ---
 Find Resources For Social Security Disability Beneficiaries Who Want To Work.&nbsp;Basic Tips On How To Write A News Report.&nbsp;On The Eve Of Deployment, A 5K Farewell For Local Veteran.&nbsp;The Open Book Hosts Author Kwame Alexander.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;Dolphin Fleet Whale Watch.&nbsp;Register For The Mack Brown Youth Football Clinic Today.&nbsp;Woman Charged In Fatal Traffic Crash.&nbsp;
